--- a/assest/css/contact.css
+++ b/assest/css/contact.css
@@ -419,7 +419,8 @@ footer .footerFlex {
 }
 
 .contact .contactbg {
-    background-image: url('/images/contactbg.jpeg');
+    /* background-image: url('/images/contactbg.jpeg'); */
+    background: url('../../images/contactbg.jpeg') no-repeat;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -805,7 +806,8 @@ form button:hover {
         width: 100%;
         height: 100%;
     }
-    .newsLetterSection{
+
+    .newsLetterSection {
         padding-top: 5%;
         padding-bottom: 3%;
     }
